@@ -26,6 +26,9 @@
      [reexec.sh]
      don't change the name of the copied sshd for the reexec fallback test,
      makes life simpler for portable
+   - dtucker@cvs.openbsd.org 2004/07/08 12:59:35
+     [scp.sh]
+     Regress test for bz #863 (scp double-error), requires $SUDO.  ok markus@
 
 20041203
  - (dtucker) OpenBSD CVS Sync
